--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Clicker+Script&family=Poppins:wght@300;500;600;700&family=Zeyada&display=swap');
 
+html {
+    scroll-behavior: smooth;
+}
 
 :root{
     --bg-black-900: #f2f2fc;
@@ -138,6 +141,7 @@ ul{
     white-space: nowrap;
     border: none;
     transition : all 0.3s ease;
+    cursor: pointer;
 }
 
 .btn:hover {
