--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,12 @@ body {
     box-sizing: border-box;
 }
 
+.bienvenue{
+    text-align: center;
+    font-size: 20px;
+    margin-bottom: 10px;
+}
+
 ul{
     list-style: none;
 }
@@ -300,17 +306,18 @@ ul{
 
 .home .home-info {
     flex: 0 0 60%;
-    max-width: 60%;
+    max-width: 70%;
 }
 
 h3.hello {
-    font-size: 28px;
+    text-align: center;
+    font-size: 23px;
     margin: 15px 0;
 }
 
 h3.hello span {
     font-family: 'Clicker Script', cursive;
-    font-size: 30px;
+    font-size: 25px;
     font-weight: 700;
     color: var(--skin-color);
 }
@@ -328,6 +335,7 @@ h3.my-profession{
     margin-bottom: 70px;
     font-size: 20px;
     color: var(--text-black-700);
+    text-align: justify;
 }
 
 .home .home-img {
@@ -344,8 +352,8 @@ h3.my-profession{
     width: 80px;
     border-bottom: 10px solid var(--skin-color);
     border-right: 10px solid var(--skin-color);
-    right: 20px;
-    bottom: -40px;
+    right: -30px;
+    bottom: 150px;
 }
 
 .home-img::before {
@@ -355,13 +363,13 @@ h3.my-profession{
     width: 80px;
     border-top: 10px solid var(--skin-color);
     border-left: 10px solid var(--skin-color);
-    left: -20px;
-    top: -40px;
+    left: 80px;
+    top:30px;
 }
 
 .home .home-img img {
-    height: 400px;
-    margin: auto;
+    height: 300px;
+    margin: 70px 0 0 150px;
     border-radius: 400px;
 }
 
@@ -388,6 +396,7 @@ h3.my-profession{
 .about .about-content .about-text p {
     font-size: 16px;
     line-height: 25px;
+    text-align: justify;
     color: var(--text-black-700);
 }
 
@@ -487,6 +496,7 @@ h3.my-profession{
 /*services*/
 .service .container {
     padding-bottom: 40px;
+
 }
 
 .service .service-item {
@@ -537,7 +547,6 @@ font-size: 18px;
 margin-bottom: 15px;
 color: var(--text-black-900);
 font-weight: 700;
-text-transform: capitalize;
 }
 
 .service .service-item .service-item-inner p {
@@ -576,6 +585,45 @@ text-transform: capitalize;
 
 .btn-1:hover {
     transform: scale(1.05);
+}
+
+.centerRow {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.vignette {
+
+    position: relative;
+    width: 300px;
+    height: 200px;
+    background-color: var(--skin-color);
+    border-radius: 10px;
+    overflow: hidden;
+    cursor: pointer;
+    margin-right: 20px;
+}
+
+.vignette:hover {
+    transform: scale(1.05);
+    transition: transform 0.3s ease-in-out;
+}
+
+.content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    color: #fff;
+}
+
+.arrow-button {
+    font-size: 15px;
+    color: #ffffff;
 }
 
 /*contact*/
